# searxng_http_mcp

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  entrypoint.sh  glama.json  healthcheck.sh  pyproject.toml  requirements.docker.txt  requirements.pip.txt  server.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: architecture.md  commands.md  workflow.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  reusable-test.yml  scorecard.yml  test.yml
config/: settings.yml
docs/: distribution.md
docs/superpowers/plans/: 2026-05-08-searxng-http-mcp.md  2026-05-09-mcp-interface-redesign.md
docs/superpowers/specs/: 2026-05-08-searxng-http-mcp-design.md  2026-05-09-mcp-interface-redesign.md
local/.claude-plugin/: plugin.json
local/skills/web-search-via-searxng/: SKILL.md
mcp_server/: app.py  auth.py  main.py  patch_settings.py  proxy.py  tools.py
plugins/local/: .mcp.json
plugins/remote/: AGENTS.md
plugins/standalone/: .mcp.json
remote/: .mcp.json
scripts/: entrypoint.sh  glama-settings.yml  glama-start.sh  healthcheck.sh  review-pr.sh  sync-version.sh
skills/search/: SKILL.md
skills/search-code/: SKILL.md
skills/search-news/: SKILL.md
skills/search-papers/: SKILL.md
skills/setup/: SKILL.md
tests/: conftest.py  stdio_server_mock.py  test_app.py  test_auth.py  test_http.py  test_patch_settings.py  test_proxy.py  test_stdio.py  test_tools.py
(+14 files in other folders)
