[project]
name = "searxng-http-mcp"
version = "1.0.0"
description = "SearXNG metasearch engine MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.28",
]

[project.scripts]
searxng-http-mcp = "mcp_server.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-anyio>=0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
